--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "backend" : "nodemon index.js",
+    "backend": "nodemon index.js",
     "test": "boiler-plate 시작합니다"
   },
   "author": "JH",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.12"
